name:                hangman
version:             2.6.3.0
synopsis:            Hangman game
description:         Please see README.md
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              R. Alenda
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , parallel
                     , free
